# spectro-plot

./: .gitmodules  CMakeLists.txt  README.md  demo.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  myplot.pro
